#ifndef LED_VIEW_H
#define LED_VIEW_H

class LedView {
  public:
    void showNear() {}
    void showMedium() {}
    void showFar() {}
};

#endif
